Fix padding on smaller screens

--- a/src/assets/custom/css/_sass/_services-offering.scss
+++ b/src/assets/custom/css/_sass/_services-offering.scss
@@ -4,5 +4,8 @@ div.services-section__inner {
 
 .compass-container {
   background: $sheen;
-  padding-top: 300px;
+
+  @include medium-large-and-extra-large {
+    padding-top: 300px;
+  }
 }
